# CMake_Class_hierarchy

./: CMakeLists.txt  Class_hierarchy.cpp
