cmake_minimum_required(VERSION 3.22.2)
project(Second)
set(source_files Class_hierarchy.cpp Equilateral_Triangle.cpp Exception.cpp Figure.cpp Isosceles_Triangle.cpp Parallelogram.cpp 
Quadrilaterral.cpp Rectangle_1.cpp Rhombs.cpp Right_Triangle.cpp Square.cpp Triangle.cpp)
add_executable(Second_project ${source_files})